[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wcrtoolkit"
version = "0.1.0"
description = "Authorized security-testing toolkit"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
wcrtoolkit = "wcrtoolkit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/wcrtoolkit"]

[tool.coverage.report]
show_missing = true
fail_under = 90
